--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 
 <head>
 
-<link rel="stylesheet" type="text/css" href="http://geolabtesting.appspot.com/js/extjs-4.2.1/resources/css/ext-all.css">
+<link rel="stylesheet" type="text/css" href="http://cdn.sencha.io/ext/gpl/4.2.1/resources/css/ext-all.css">
 
-<script type="text/javascript" src="http://geolabtesting.appspot.com/js/extjs-4.2.1/ext-all-debug.js"></script>
+<script type="text/javascript" src="http://cdn.sencha.io/ext/gpl/4.2.1/ext-all.js"></script>
 
 <script type="text/javascript" src="fg_js/Settings.js"></script>
 <script type="text/javascript" src="fg_js/PropsTreeBrowser.js"></script>
 <script type="text/javascript" src="fg_js/PortalView.js"></script>
 
+<style>
+.icoRefresh{background-image: url('http://ico.daffodil.uk.com/arrow_refresh.png') !important; background-repeat: no-repeat;}
+
+</style>
 </head>
 
 <body>
